tests/errors/constructor_arg_in_method_body.dang
# Test that constructor args are not available in method bodies
# This should fail because 'secret' is only visible in new()

type Bad {
	pub name: String!

	new(secret: String!) {
		self.name = secret
		self
	}

	pub leak: String! {
		secret # Error: secret is not in scope here
	}
}
